manifest/bhasai/admin/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app.kubernetes.io/name: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app.kubernetes.io/name: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
