manifest/bhasai/admin/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "admin.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin
            port:
              number: 80
